--- a/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Admin.UserManager.DetailModel
 @{
-    ViewData["ActivePage"] = "UserManager";
+    ViewData["ActivePage"] = "Phronesis - User Manager";
 }
 
 <div class="page-header">
