--- a/final-project-fe/Pages/CourseRecommend.cshtml
+++ b/final-project-fe/Pages/CourseRecommend.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.CourseRecommendModel
 @{
-    ViewData["Title"] = "Recommended Courses For You";
+    ViewData["Title"] = "Phronesis - Recommended Courses";
 }
 
 <head>
