--- a/final-project-fe/Pages/CreateReview.cshtml
+++ b/final-project-fe/Pages/CreateReview.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.CreateReviewModel
 @{
-    ViewData["Title"] = "Write a Review";
+    ViewData["Title"] = "Phronesis - Review";
 }
 
 <!DOCTYPE html>
