--- a/final-project-fe/Pages/Login.cshtml
+++ b/final-project-fe/Pages/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Shared.LoginModel
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Phronesis - Login";
     Layout = null;
 }
 @using System.Text.Json
@@ -10,7 +10,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phronesis – Grow Wisdom. Sharpen Skills.</title>
+    <title>Phronesis – Login.</title>
     <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/style.css">
