--- a/final-project-fe/Pages/Mentor/MentorPage/AddCouponPage.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/AddCouponPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Mentor.MentorPage.AddCouponPageModel
 @{
-    ViewData["Title"] = "Add Coupon";
+    ViewData["Title"] = "Phronesis - Add Coupon";
     Layout = null;
 }
 <title>Add Coupon</title>
