--- a/final-project-fe/Pages/Mentor/MentorPage/AttendancePage.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/AttendancePage.cshtml
@@ -2,7 +2,7 @@
 @model final_project_fe.Pages.Mentor.MentorPage.AttendancePageModel
 
 @{
-    ViewData["Title"] = "Attendance";
+    ViewData["Title"] = "Phronesis - Attendance";
 }
 
 <style>
