--- a/final-project-fe/Pages/Mentor/MentorPage/CreateCourse.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CreateCourse.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Mentor.MentorPage.CreateCourseModel
 @{
-    ViewData["Title"] = "Create New Course";
+    ViewData["Title"] = "Phronesis - Create Course";
 }
 <style>
     /* Modern Course Creation Styles */
