--- a/final-project-fe/Pages/Mentor/MentorPage/CreateWorkShop.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CreateWorkShop.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Mentor.MentorPage.CreateWorkShopModel
 @{
-    ViewData["Title"] = "Create New Workshop";
+    ViewData["Title"] = "Phronesis - Create Workshop";
 }
 <html lang="vi">
 <head>
