--- a/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
@@ -2,7 +2,7 @@
 @model final_project_fe.Pages.Mentor.MentorPage.DashboardModel
 @{
     Layout = "/Pages/Mentor/Shared/_MentorLayout2.cshtml";
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Phronesis - Mentor Dashboard";
 }
 <head>
     <!-- ========== All CSS files linkup ========= -->
