--- a/final-project-fe/Pages/Mentor/MentorPage/GradePage.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/GradePage.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Mentor.MentorPage.GradePageModel
 @{
-    ViewData["Title"] = "Assignment scoring";
+    ViewData["Title"] = "Phronesis - Assignment scoring";
 }
 
 <style>
