--- a/final-project-fe/Pages/Mentor/MentorPage/MyCourses.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/MyCourses.cshtml
@@ -2,7 +2,7 @@
 @model final_project_fe.Pages.Mentor.MentorPage.MyCoursesModel
 @{
     Layout = "/Pages/Mentor/Shared/_MentorLayout2.cshtml";
-    ViewData["Title"] = "My Courses";
+    ViewData["Title"] = "Phronesis - My Courses";
 }
 <head>
     <title>My Courses</title>
