--- a/final-project-fe/Pages/Mentor/MentorPage/RequestWithdrawal.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/RequestWithdrawal.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Mentor.MentorPage.RequestWithdrawalModel
 @{
-    ViewData["Title"] = "Withdrawal Request";
+    ViewData["Title"] = "Phronesis - Withdrawal Request";
     Layout = "/Pages/Mentor/Shared/_MentorLayout2.cshtml";
 }
 
@@ -217,7 +217,7 @@
             <div id="validationAlert" class="alert alert-error hidden">
                 <i class="fas fa-exclamation-circle flex-shrink-0"></i>
                 <div>
-                    <h4 class="font-medium">Validation Error</h4>
+                    <h4 class="font-medium">Request Error</h4>
                     <p id="validationMessage" class="text-sm mt-1"></p>
                 </div>
             </div>
