--- a/final-project-fe/Pages/MentorRegister.cshtml
+++ b/final-project-fe/Pages/MentorRegister.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.MentorRegisterModel
 @{
+    ViewData["Title"] = "Phronesis - Mentor Registration";
 }
     <h2 class="form-title"> Mentor Registration Form</h2>
 
