--- a/final-project-fe/Pages/MentorRegulations.cshtml
+++ b/final-project-fe/Pages/MentorRegulations.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.MentorRegulationsModel
 @{
-    ViewData["Title"] = "Mentor Registration Policy";
+    ViewData["Title"] = "Phronesis - Mentor Policy";
 }
 <div class="theme-layout">
     <div class="container">
