--- a/final-project-fe/Pages/RegistSchedule.cshtml
+++ b/final-project-fe/Pages/RegistSchedule.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int}"
 @model final_project_fe.Pages.RegistScheduleModel
 @{
-    ViewData["Title"] = "Register Schedule";
+    ViewData["Title"] = "Phronesis - Register Schedule";
 }
 
 
