--- a/final-project-fe/Pages/ResetPassword.cshtml
+++ b/final-project-fe/Pages/ResetPassword.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/fav.png" type="image/png" sizes="16x16">
+    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/color.css">
@@ -22,10 +22,10 @@
                 <div class="col-lg-6">
                     <div class="land-featurearea">
                         <div class="land-meta">
-                            <h1>Winku</h1>
-                            <p>Winku is free to use for as long as you want with two active projects.</p>
-                            <div class="friend-logo">
-                                <span><img src="images/wink.png" alt=""></span>
+                            <h1>Phronesis</h1>
+                            <p>Phronesis helps you master essential soft skills to thrive in life and work.</p>
+                            <div class="circle-icon">
+                                <img src="~/images/learning.png" alt="Learning Icon" />
                             </div>
                         </div>
                     </div>
@@ -56,13 +56,6 @@
                                     <button class="mtr-btn signup" type="button" onclick="window.location.href='@Url.Page("/Login")'"><span>Back to Login</span></button>
                                 </div>
                             </form>
-
-                            @if (Model.Message != null)
-                            {
-                                <div class="mt-3" style="color:@(Model.IsSuccess ? "green" : "red"); font-weight:bold;">
-                                    @Model.Message
-                                </div>
-                            }
                         </div>
                     </div>
                 </div>
@@ -70,7 +63,36 @@
             </div>
         </div>
     </div>
+    <style>
+    .circle-icon {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px auto 0 auto;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
+    .circle-icon img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    }
+
+    .land-featurearea {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    }
+
+    .land-meta {
+    text-align: center;
+    }
+    </style>
     <script src="js/main.min.js"></script>
     <script src="js/script.js"></script>
 </body>
