--- a/final-project-fe/Pages/Shared/_ConfirmDialog.cshtml
+++ b/final-project-fe/Pages/Shared/_ConfirmDialog.cshtml
@@ -502,7 +502,7 @@
                 confirmText: 'OK',
                 cancelText: 'Cancel',
                 onConfirm: () => {
-                    window.location.href = '/#';
+                    window.location.href = '/UpdatePremium';
                 }
             });
         }
