--- a/final-project-fe/Pages/TransactionHistory.cshtml
+++ b/final-project-fe/Pages/TransactionHistory.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.TransactionHistoryModel
 @{
+    TempData["Title"] = "Phronesis - Transaction History";
 }
 
 <style>
