--- a/final-project-fe/Pages/UpdatePremium.cshtml
+++ b/final-project-fe/Pages/UpdatePremium.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.UpdatePremiumModel
 @{
-    ViewData["Title"] = "Update Premium";
+    ViewData["Title"] = "Phronesis - Update Premium";
 }
 <!DOCTYPE html>
 <html lang="vi">
