--- a/final-project-fe/Pages/Admin/UserManager/Index.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.Admin.UserManager.IndexModel
 @{
-    ViewData["ActivePage"] = "UserManager";
+    ViewData["ActivePage"] = "Phronesis - User Manager";
 }
 <div class="page-header">
     <h3 class="fw-bold mb-3">User Manager</h3>
