--- a/final-project-fe/Pages/ConfirmEmail.cshtml
+++ b/final-project-fe/Pages/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Email Confirmation";
+    ViewData["Title"] = "Phronesis - Email Confirmation";
 }
 
 <div class="confirm-email-wrapper">
