--- a/final-project-fe/Pages/Mentor/MentorPage/CreateSchedule.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CreateSchedule.cshtml
@@ -2,7 +2,7 @@
 @using Newtonsoft.Json
 @model final_project_fe.Pages.Mentor.CreateScheduleModel
 @{
-    ViewData["Title"] = "Create Schedule";
+    ViewData["Title"] = "Phronesis - Create Schedule";
     Layout = null;
 }
 <!DOCTYPE html>
