--- a/final-project-fe/Pages/PurchaseHistory.cshtml
+++ b/final-project-fe/Pages/PurchaseHistory.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model final_project_fe.Pages.PurchaseHistoryModel
 @{
+    TempData["Title"] = "Phronesis - Purchase History";
 }
 
 <style>
