--- a/final-project-fe/Pages/UserCourse.cshtml
+++ b/final-project-fe/Pages/UserCourse.cshtml
@@ -2,7 +2,7 @@
 @model final_project_fe.Pages.UserCourseModel
 
 @{
-    ViewData["Title"] = "User Course";
+    ViewData["Title"] = "Phronesis - User Course";
 }
 <!DOCTYPE html>
 <html lang="en">
